# devkit

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  Dockerfile.dev  LICENSE  Makefile  README.md  dev.sh  pyproject.toml
.claude/: settings.json
.github/workflows/: ci.yml  release.yml
devkit-cli/: pyproject.toml
devkit-cli/src/devkit_cli/: installer.py  main.py
devkit-core/: pyproject.toml
devkit-core/src/devkit_core/: __init__.py  aliases.py  app.py  banner.py  brand.py  command.py  commands.py  completion.py  completion_command.py  config.py  discovery.py  global_config.py  output.py  spinner.py  term.py  update_command.py  updater.py
devkit-core/src/devkit_core/completion/: __init__.py  assemble.py  models.py  render.py  sources.py
devkit-core/tests/: test_commands.py  test_completion.py  test_config.py  test_discovery.py  test_global_config.py  test_spinner.py  test_updater.py
devkit-encode/: pyproject.toml
devkit-encode/src/devkit_encode/: commands.py
devkit-encode/tests/: test_commands.py
devkit-file/: pyproject.toml
devkit-file/src/devkit_file/: commands.py
devkit-file/tests/: test_commands.py
devkit-git/: pyproject.toml
devkit-git/src/devkit_git/: commands.py
devkit-git/tests/: test_commands.py
devkit-linux/: pyproject.toml
devkit-macos/: pyproject.toml
devkit-net/: pyproject.toml
devkit-net/src/devkit_net/: commands.py
devkit-net/tests/: test_commands.py
devkit-windows/: pyproject.toml
docs/: architecture.md  commands-reference.md  config-reference.md  plugin-authoring.md
