[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "devkit-cli"
version = "0.2.1"
description = "Cross-platform developer CLI toolbelt — install with: pipx install devkit-cli"
requires-python = ">=3.11"
dependencies = [
    "devkit-core>=0.2.0",
    "devkit-git>=0.2.0",
    "devkit-net>=0.2.0",
    "devkit-file>=0.2.0",
    "devkit-encode>=0.2.0",
]

[project.scripts]
devkit = "devkit_cli.main:main"

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "pytest-mock>=3",
    "ruff>=0.4",
    "mypy>=1.10",
]

[tool.hatch.build.targets.wheel]
packages = ["src/devkit_cli"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
