[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "devkit-core"
version = "0.2.1"
description = "Core framework, plugin discovery, and shared utilities for devkit"
requires-python = ">=3.11"
dependencies = [
    "typer>=0.12",
    "rich>=13",
    "tomli-w>=1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "pytest-mock>=3",
    "ruff>=0.4",
    "mypy>=1.10",
]

[tool.hatch.build.targets.wheel]
packages = ["src/devkit_core"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
