[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "devkit-encode"
version = "0.2.0"
description = "Encoding and conversion helpers for devkit"
requires-python = ">=3.11"
dependencies = [
    "devkit-core>=0.2.0",
    "typer>=0.12",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "pytest-mock>=3",
    "ruff>=0.4",
    "mypy>=1.10",
]

[project.entry-points."devkit.commands"]
encode = "devkit_encode.commands:EncodeCommandGroup"
decode = "devkit_encode.commands:DecodeCommandGroup"

[tool.hatch.build.targets.wheel]
packages = ["src/devkit_encode"]
