[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "devkit-net"
version = "0.1.0"
description = "Network helpers for devkit"
requires-python = ">=3.11"
dependencies = [
    "devkit-core>=0.1.0",
    "typer>=0.12",
    "psutil>=5.9",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "pytest-mock>=3",
    "ruff>=0.4",
    "mypy>=1.10",
]

[project.entry-points."devkit.commands"]
net = "devkit_net.commands:CommandGroup"

[tool.hatch.build.targets.wheel]
packages = ["src/devkit_net"]
