[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "devkit-windows"
version = "0.2.0"
description = "Windows bundle for devkit — installs core and all default command groups"
requires-python = ">=3.11"
dependencies = [
    "devkit-core>=0.2.0",
    "devkit-git>=0.2.0",
    "devkit-net>=0.2.0",
    "devkit-file>=0.2.0",
    "devkit-encode>=0.2.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/devkit_windows"]
